Проектная работа Место для Я.Практикум

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </ul>
             </section>
         </main>
-        <footer class="footer section section__footer">
+        <footer class="footer section">
             <p class="footer__copyright">&copy; 2022
                 Mesto
                 Russia</p>
@@ -108,13 +108,15 @@
                     novalidate>
                     <fieldset class="popup__block">
                         <div class="popup__input-container">
-                            <input type="text" class='popup__input_type_name'
+                            <input type="text"
+                                class='popup__input-name'
                                 name='name' autofocus value="Жак-Ив Кусто"
                                 placeholder="Имя пользователя" minlength="2"
                                 maxlength="40" required>
                         </div>
                         <div class="popup__input-container">
-                            <input type="text" class='popup__input_type_job'
+                            <input type="text"
+                                class='popup__input-job'
                                 name='job' value="Исследователь океана"
                                 placeholder="Профессия пользователя"
                                 minlength="2" maxlength="200" required>
